@@ -1,5 +1,5 @@
 #define VERSION_MAJOR      1
 #define VERSION_MINOR      0
 #define VERSION_REVISION   0
-#define VERSION_BETA       -beta
-#define VERSION_BUILD      2
+#define VERSION_BETA       
+#define VERSION_BUILD      0
