@@ -1243,13 +1243,13 @@ Version history
     - vcxproj: only print the filename in the "Compiling" message, not the path
 
 unreleased version 1.0.0
-  * Visual D and all tools now built with LDC
   * projects:
     - trailing \ now removed from $(WindowsSDKVersion)/$(UCRTVersion) for more consistency between
       autodetected version and as read from the environment
     - added global option "Echo batch commands executed" to show commands during builds
     - workaround /noopttls no longer added when building with LDC or dmd 2.076+
   * dmdserver:
+    - now built with LDC
     - now enabled by default including semantic highlighting
     - updated to dmd 2.092
     - improve preciseness for the GC
@@ -1263,5 +1263,7 @@ unreleased version 1.0.0
   * mago debugger
     - can now execute class/struct methods __debugOverview, __debugExpanded, __debugTextView
       to customize display in the debugger
-    - can now display ranges similar to arrays
+    - experimental: can now display ranges similar to arrays
     - some performance improvements by caching some data while the debuggee is stopped
+  * installer:
+    - full installer now bundled with dmd 2.092.1 and LDC 1.22.0
